# is-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-05-is-cli.md
docs/superpowers/specs/: 2026-07-05-is-cli-design.md
src/: cli.rs  config.rs  lib.rs  main.rs  model.rs  prompt.rs  runner.rs  stream.rs  verdict.rs
tests/: integration.rs  live.rs
tests/fixtures/: garbage.jsonl  no.jsonl  prose.jsonl  unknown.jsonl  yes.jsonl
