[package]
name = "is-cli"
version = "0.1.0"
edition = "2021"
description = "Ask your terminal yes/no questions, answered by a read-only Claude agent"
license = "MIT"

[lib]
name = "is_cli"
path = "src/lib.rs"

[[bin]]
name = "is"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
